--- a/.github/workflows/generate-doc.yml
+++ b/.github/workflows/generate-doc.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Download Postman Collection from External Repository
         run: |
           curl -o Club.postman_collection.json https://raw.githubusercontent.com/AlejoGomezC/cURL-test/main/collections/Club.postman_collection.jso
-      - name: Install Newman and Postman Doc Generator
+      - name: Install Newman
         run: |
-          npm install -g newman newman-reporter-html postman-to-html
+          npm install -g newman newman-reporter-html
 
       - name: Run Newman and Generate Docs
         run: |
@@ -28,3 +28,4 @@ jobs:
           git add docs/
           git commit -m 'Generated API documentation from Club Postman collection' || echo "No changes to commit"
           git push
+
