--- a/.github/workflows/generate-doc.yml
+++ b/.github/workflows/generate-doc.yml
@@ -11,7 +11,7 @@ jobs:
 
       - name: Download Postman Collection from External Repository
         run: |
-          curl -o Club.postman_collection.json https://raw.githubusercontent.com/AlejoGomezC/cURL-test/main/collections/Club.postman_collection.jso
+          curl -o Club.postman_collection.json https://raw.githubusercontent.com/AlejoGomezC/cURL-test/main/collections/Club.postman_collection.json
       - name: Install Newman
         run: |
           npm install -g newman newman-reporter-html
