--- a/.github/workflows/generate-doc.yml
+++ b/.github/workflows/generate-doc.yml
@@ -12,6 +12,10 @@ jobs:
       - name: Download Postman Collection from External Repository
         run: |
           curl -o Club.postman_collection.json https://raw.githubusercontent.com/AlejoGomezC/cURL-test/main/collections/Club.postman_collection.json
+          if [ ! -s Club.postman_collection.json ]; then
+            echo "Error: Club.postman_collection.json is missing or empty"
+            exit 1
+          fi
 
       - name: Install Newman and jq
         run: |
