--- a/.github/workflows/generate-doc.yml
+++ b/.github/workflows/generate-doc.yml
@@ -11,7 +11,7 @@ jobs:
 
       - name: Download Postman Collection from External Repository
         run: |
-          curl -o Club.postman_collection.json https://raw.githubusercontent.com/AlejoGomezC/cURL-test/main/collections/Club.postman_collection.json
+          curl -o Club.postman_collection.json -fSL https://raw.githubusercontent.com/AlejoGomezC/cURL-test/main/collections/Club.postman_collection.json
           if [ ! -s Club.postman_collection.json ]; then
             echo "Error: Club.postman_collection.json is missing or empty"
             exit 1
