--- a/.github/workflows/securitycodescan.yml
+++ b/.github/workflows/securitycodescan.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: 'usuario/otro-repo'  # Reemplaza 'usuario/otro-repo' con el repositorio que deseas clonar
+          repository: 'AlejoGomezC/HPlusSport-API-.NET' 
       - uses: nuget/setup-nuget@04b0c2b8d1b97922f67eca497d7cf0bf17b8ffe1
       - uses: microsoft/setup-msbuild@v1.0.2
 
