--- a/.github/workflows/postman-collection.yml
+++ b/.github/workflows/postman-collection.yml
@@ -1,6 +1,6 @@
 # This workflow will build and deploy a .NET project locally and document the responses
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-name: .NET
+name: postman-collection
 on:
   workflow_dispatch:
 
@@ -27,5 +27,21 @@ jobs:
 
     - name: Run API locally
       run: dotnet run --project ./HPlusSport.API
+      
+    - name: Install Newman
+      run: npm install -g newman
+
+    - name: Download Postman collection
+      run: curl -o MyFirst.NetApi.postman_collection.json -fSL https://raw.githubusercontent.com/AlejoGomezC/cURL-test/main/collections/MyFirst.NetApi.postman_collection.json
+    
+    - name: Run Postman collection
+      run: newman run MyFirst.NetApi.postman_collection.json
+
+    - name: Document API responses
+      run: |
+        jq -r '.item[] | "- **" + .name + "**\n  - Method: " + .request.method + "\n  - URL: " + .request.url.raw + "\n  - Body: ```json\n" + (.request.body.raw // "No body") + "\n```\n  - Response: ```json\n" + (.response[0].body // "No response") + "\n```\n"' MyFirst.NetApi.postman_collection.json >> docs/.Net_README.md
+        echo "Parsed JSON and updated .NET README.md"
+
+
 
       
