--- a/.github/workflows/postman-collection.yml
+++ b/.github/workflows/postman-collection.yml
@@ -44,6 +44,14 @@ jobs:
         jq -r '.item[] | "- **" + .name + "**\n  - Method: " + .request.method + "\n  - URL: " + .request.url.raw + "\n  - Body: ```json\n" + (.request.body.raw // "No body") + "\n```\n  - Response: ```json\n" + (.response[0].body // "No response") + "\n```\n"' MyFirst.NetApi.postman_collection.json >> docs/.Net_README.md
         echo "Parsed JSON and updated .NET README.md"
 
+    - name: Commit and Push Generated Docs
+      run: |
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
+        git add docs/
+        git commit -m 'Generated API documentation from .NET Postman collection' || echo "No changes to commit"
+        git push
+
 
 
       
