--- a/.github/workflows/postman-collection.yml
+++ b/.github/workflows/postman-collection.yml
@@ -1,6 +1,8 @@
-# This workflow will build and deploy a .NET project locally and document the responses
+# This workflow will build and deploy a .NET project locally y documentar las respuestas
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
+
 name: postman-collection
+
 on:
   workflow_dispatch:
 
@@ -15,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        repository: 'AlejoGomezC/HPlusSport-API-.NET'
+        repository: 'AlejoGomezC/cURL-documentation'
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -30,7 +32,7 @@ jobs:
 
     - name: Run API locally
       run: dotnet run --project ./HPlusSport.API &
-      
+
     - name: Install Newman
       run: npm install -g newman
 
@@ -46,15 +48,11 @@ jobs:
         touch docs/.Net_README.md
         jq -r '.item[] | "- **" + .name + "**\n  - Method: " + .request.method + "\n  - URL: " + .request.url.raw + "\n  - Body: ```json\n" + (.request.body.raw // "No body") + "\n```\n  - Response: ```json\n" + (.response[0].body // "No response") + "\n```\n"' MyFirst.NetApi.postman_collection.json >> docs/.Net_README.md
         echo "Parsed JSON and updated .NET README.md"
-
     - name: Commit and Push Generated Docs
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add .
+        git add docs/
         git commit -m 'Generated API documentation from .NET Postman collection' || echo "No changes to commit"
         git push
 
-
-
-      
